# Mapreduce

./: CMakeLists.txt  LICENSE  README.md  test.txt
.github/workflows/: release.yml
cmake/: compiler.cmake  test.cmake
cmake/packaging/: CMakeLists.txt
cmake/version/: VERSION.in  project.cpp  project.h  version.h.in
description/: MapReduce.cpp
src/: log.hpp  main.cpp  mapreduce.cpp  mapreduce.hpp  runner.cpp
test/: test_version.cpp
